--- a/assets/css/account.css
+++ b/assets/css/account.css
@@ -16,3 +16,7 @@
 #info_jeu > .row > .col-md-2.game-image{left: 15px;position: relative;top: 8px;}
 #info_jeu > .row > .col-md-8 > .game-extension{color: rgba(63, 63, 84, 0.39);font-size: 10px;padding-left: 20px;position: relative;top: -15px;}
 #info_jeu > .row > .col-md-8 > .game-title{color: #204d74;}
+
+/*ACCOUNT --> GAME*/
+#wow{background: url("../img/game/bg-wow.jpg") no-repeat scroll 0 0; width: 1920px; height: 1000px;}
+
